--- a/final-project.html
+++ b/final-project.html
@@ -13,20 +13,36 @@
         }
         .thumbnail {
             width: 300px;
+            border-radius: 10px;
         }
 
         .video-title {
-            width: 250px;
+            width: 275px;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-size: 14px;
             font-weight: bold;
             color: #f1f1f1;
+            margin-bottom: 10px;
 
         }
+
+        .video-author,
+        .video-stats {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 14px;
+            margin-top: 0px;
+            margin-bottom: 0px;
+            color: #AAAAAA;
+        }
     </style>
-    <img class="300px" src="img/hq720.jpg" alt="thumbnail">
-    <p class="video-title">Kinda like a diary&#91;Travel Vlog&#58; Boracay&#93;</p>
-    <p>heart Ryan</p>
-    <p>194k views &#183; 1 month ago</p>
+    <img class="thumbnail" src="img/img.jpg" alt="thumbnail">
+    <p class="video-title">HTML & CSS Full Course - Beginner to Pro</p>
+    <p class="video-author">
+        SuperSimpleDev
+    </p>
+    
+    <p class="video-stats">
+        3.4M views &#183; 1 year ago
+    </p>
 </body>
 </html>
