--- a/lesson9.html
+++ b/lesson9.html
@@ -32,5 +32,95 @@
    <div>
     <p class="circle"></p>
    </div>
+
+   <br>
+   <hr>
+   <br>
+
+
+   <style>
+    .border {
+        border-style: solid;
+        border-width: 1px;
+        border-color: #aaaaaa;
+        width: 35%;
+        padding: 5px 5px 20px 10px;
+    }
+
+    .txt {
+        font-family: arial;
+        font-size: 14px;
+
+    }
+
+    .button {
+        margin: 3px;
+    }
+   </style>
+   <div class="border">
+    <p class="txt">
+        Satisfied with our service?
+    </p>
+    <button class="button">Yes</button><button class="button">No</button>
+   </div>
+
+
+   <br>
+   <hr>
+   <br>
+
+
+   <style>
+    .background{
+        border-style: solid;
+        border-width: 1px;
+        width: 36%;
+        padding: 1px 5px 5px 10px;
+        font-family: arial;
+        background-color: #121212;
+    }
+
+    .title{
+        font-weight: bold;
+        font-size: 20px;
+        color: #f1f1f1;
+        margin-bottom: 0px;
+
+    }
+
+    .subtitle{
+       
+        font-size: 12px;
+        color: #aaaaaa;
+        margin-top: 10px;
+    }
+   </style>
+
+   <div class="background">
+    <p class="title">Install YouTube Music</p>
+    <p class=" subtitle">Add YouTube Music to your desktop for quick and easy access</p>
+   </div>
+
+
+   <br>
+   <hr>
+   <br>
+
+   <style>
+    .card {
+        border-style: solid;
+        border-width: 1px;
+        width: 14%;
+        height: 300px;
+    }
+
+    img{
+        width: 100%;
+    }
+   </style>
+
+   <div class="card">
+    <img class="" src="img/profile.jpg" alt="">
+   </div>
 </body>
 </html>
