--- a/lesson9.html
+++ b/lesson9.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <style>
+        .shapes {
+            display: inline-block;
+        }
         .box{
             background-color: red;
             border-color: red;
             width: 50px;
             height: 50px;
+            display: inline-block;
 
         }
 
@@ -22,14 +26,12 @@
             width: 50px;
             height: 50px;
             border-radius:  50px;
+            display: inline-block;
         }
     </style>
 
-   <div>
+   <div class="shapes">
     <p class="box"></p>
-   </div>
-
-   <div>
     <p class="circle"></p>
    </div>
 
@@ -107,20 +109,169 @@
    <br>
 
    <style>
+
+
     .card {
         border-style: solid;
         border-width: 1px;
+        border-radius: 10px;
         width: 14%;
-        height: 300px;
+        height: 100%;
+        border: none;
+        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+        display: inline-block;
+        margin: 5px;
+
+        
+    }
+
+    .card:hover {
+        transition: transform .5s;
+        transform: scale(1.2);
     }
 
     img{
         width: 100%;
+        border-radius: 10px;
+    }
+
+    .name{
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        margin: 10px;
+        margin-bottom: 1px;
+
+    }
+
+    .mutual-friend {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 12px;
+        color: #aaaaaa;
+        margin: 10px;
+        margin-top: 1px;
+        margin-bottom: 1px;
+    }
+
+    .add-friend {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: dodgerblue;
+        color: white;
+        border-style: none;
+        margin: 10px;
+
     }
    </style>
 
    <div class="card">
-    <img class="" src="img/profile.jpg" alt="">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
+   </div>
+
+   <div class="card">
+    <img class="img" src="img/profile.jpg" alt="">
+    <p class="name">Jairus</p>
+    <p class="mutual-friend">5 mutual friends</p>
+    <button class="add-friend">Add Friend</button>
    </div>
 </body>
 </html>
